Fix button spacing

--- a/css/_logged-in.scss
+++ b/css/_logged-in.scss
@@ -102,6 +102,7 @@
       .mood-btn {
         flex: 0 0 48%;
         padding: 2rem 0;
+        margin-bottom: 0.5rem;
         background: $brand;
         color: #fff;
         transition: 0.4s ease;
